src/parsermgr/CubeSqlParser.java
/*
*    DelianCubeEngine. A simple cube query engine.
*    Copyright (C) 2018  Panos Vassiliadis
*
*    This program is free software: you can redistribute it and/or modify
*    it under the terms of the GNU Affero General Public License as published
*    by the Free Software Foundation, either version 3 of the License, or
*    (at your option) any later version.
*
*    This program is distributed in the hope that it will be useful,
*    but WITHOUT ANY WARRANTY; without even the implied warranty of
*    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
*    GNU Affero General Public License for more details.
*
*    You should have received a copy of the GNU Affero General Public License
*    along with this program.  If not, see <https://www.gnu.org/licenses/>.
*
*/


// $ANTLR 3.4 ./CubeSql.g 2013-07-10 18:57:41

  package parsermgr;
  
  import java.util.ArrayList;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


/**
 * The parser class for the declaration of dimensions and cubes
 * 
 *  @author D. Gkesoulis
 *  @version 0.0.1
 *  @see CubeSqlLexer
 *  @see ParserManager
 *  @since v0.0.0 (the Cincecubes system) 
 */
@SuppressWarnings({"all", "warnings", "unchecked"})
public class CubeSqlParser extends Parser {
  
	public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "A", "AND", "AS", "AT", "AVG", "B", "BY", "C", "CHILDOF", "COMMA", "COUNT", "CREATE", "CUBE", "D", "DIMENSION", "DIMENSION_TABLE", "DOT", "Digit", "E", "F", "FROM", "G", "GROUP", "H", "HIERARCHY", "I", "J", "K", "L", "LBRACE", "LEVEL", "LIST", "Letter", "M", "MAX", "MEASURES", "MIN", "N", "NAME", "O", "OF", "OR", "P", "Q", "QUESTMARK", "R", "RBRACE", "REFERENCES", "RELATED", "S", "SELECT", "SQL_TABLE", "SUM", "T", "U", "UNDERSCORE", "V", "W", "WHERE", "WS", "X", "Y", "Z", "'\"'", "'('", "')'", "'<'", "'<='", "'='", "'>='", "'LIKE'", "'\\''"
    };

    public static final int EOF=-1;
    
    public static final int T__67=67;
    public static final int T__68=68;
    public static final int T__69=69;
    public static final int T__70=70;
    public static final int T__71=71;
    public static final int T__72=72;
    public static final int T__73=73;
    public static final int T__74=74;
    public static final int T__75=75;
    
    //alex: token Names from the list
    public static final int A=4;
    public static final int AND=5;
    public static final int AS=6;
    public static final int AT=7;
    public static final int AVG=8;
    ///public static final int B=9;
    public static final int BY=10;
    public static final int C=11;
    public static final int CHILDOF=12;
    public static final int COMMA=13;
    public static final int COUNT=14;
    public static final int CREATE=15;
    public static final int CUBE=16;
    public static final int D=17;
    public static final int DIMENSION=18;
    public static final int DIMENSION_TABLE=19;
    public static final int DOT=20;
    public static final int Digit=21;
    public static final int E=22;
    public static final int F=23;
    public static final int FROM=24;
    public static final int G=25;
    public static final int GROUP=26;
    public static final int H=27;
    public static final int HIERARCHY=28;
    public static final int I=29;
    public static final int J=30;
    public static final int K=31;
    public static final int L=32;
    public static final int LBRACE=33;
    public static final int LEVEL=34;
    public static final int LIST=35;
    public static final int Letter=36;
    public static final int M=37;
    public static final int MAX=38;
    public static final int MEASURES=39;
    public static final int MIN=40;
    public static final int N=41;
    public static final int NAME=42;
    public static final int O=43;
    public static final int OF=44;
    public static final int OR=45;
    public static final int P=46;
    public static final int Q=47;
    public static final int QUESTMARK=48;
    public static final int R=49;
    public static final int RBRACE=50;
    public static final int REFERENCES=51;
    public static final int RELATED=52;
    public static final int S=53;
    public static final int SELECT=54;
    public static final int SQL_TABLE=55;
    public static final int SUM=56;
    public static final int T=57;
    public static final int U=58;
    public static final int UNDERSCORE=59;
    public static final int V=60;
    public static final int W=61;
    public static final int WHERE=62;
    public static final int WS=63;
    public static final int X=64;
    public static final int Y=65;
    public static final int Z=66;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public CubeSqlParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    
    
    //alex :8a  mporouse na private
    public CubeSqlParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }
 

    public String[] getTokenNames() { return CubeSqlParser.tokenNames; }
    public String getGrammarFileName() { return "./CubeSql.g"; }

    	//alex:	pedia???
      Integer mode;
      String name_creation;
      String sql_table;
      ArrayList<String> dimensionlst;
      ArrayList<String> hierachylst;
      ArrayList<String> originallvllst;
      ArrayList<String> customlvllst;
      ArrayList<String> conditionlst;
      ArrayList<String> tablelst;
      ArrayList<String> groupperlst;
      ArrayList<String> measurelst;
      ArrayList<String> measurefields;
      String aggregatefunc;
      String tmp_con;
      boolean group;



    // $ANTLR start "start"
    // ./CubeSql.g:42:1: start : parse ;
    public final void start() throws RecognitionException {
        try {
            // ./CubeSql.g:42:7: ( parse )
            // ./CubeSql.g:42:8: parse
            {

                mode=0;
                tmp_con="";
                group=false;
                dimensionlst=new ArrayList<String>();
                hierachylst=new ArrayList<String>();
                originallvllst=new ArrayList<String>();
                customlvllst=new ArrayList<String>();
                conditionlst=new ArrayList<String>();
                groupperlst=new ArrayList<String>();
                tablelst=new ArrayList<String>();
                measurelst=new ArrayList<String>();
                measurefields=new ArrayList<String>();
              

            pushFollow(FOLLOW_parse_in_start131);
            parse();

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "start"

    
    
    // $ANTLR start "parse"
    // ./CubeSql.g:57:1: parse : ( ( creation_statement )* | sql_query );
    public final void parse() throws RecognitionException {
        try {
            // ./CubeSql.g:57:7: ( ( creation_statement )* | sql_query )
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==EOF||LA2_0==CREATE) ) {
                alt2=1;
            }
            else if ( (LA2_0==SELECT) ) {
                alt2=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;

            }
            switch (alt2) {
                case 1 :
                    // ./CubeSql.g:57:10: ( creation_statement )*
                    {
                    // ./CubeSql.g:57:10: ( creation_statement )*
                    loop1:
                    do {
                        int alt1=2;
                        int LA1_0 = input.LA(1);

                        if ( (LA1_0==CREATE) ) {
                            alt1=1;
                        }


                        switch (alt1) {
                    	case 1 :
                    	    // ./CubeSql.g:57:11: creation_statement
                    	    {
                    	      mode=0;
                    	                name_creation="";
                    	                sql_table="";
                    	                if(dimensionlst.size()>0)  dimensionlst.clear();
                    	                if(hierachylst.size()>0)  hierachylst.clear();
                    	                if(originallvllst.size()>0)  originallvllst.clear();
                    	                if(customlvllst.size()>0)  customlvllst.clear();
                    	               

                    	    pushFollow(FOLLOW_creation_statement_in_parse156);
                    	    creation_statement();

                    	    state._fsp--;


                    	    }
                    	    break;

                    	default :
                    	    break loop1;
                        }
                    } while (true);


                    }
                    break;
                case 2 :
                    // ./CubeSql.g:66:11: sql_query
                    {
                    pushFollow(FOLLOW_sql_query_in_parse172);
                    sql_query();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "parse"



    // $ANTLR start "creation_statement"
    // ./CubeSql.g:69:1: creation_statement : creation QUESTMARK ;
    public final void creation_statement() throws RecognitionException {
        try {
            // ./CubeSql.g:69:20: ( creation QUESTMARK )
            // ./CubeSql.g:69:22: creation QUESTMARK
            {
            pushFollow(FOLLOW_creation_in_creation_statement184);
            creation();

            state._fsp--;


            match(input,QUESTMARK,FOLLOW_QUESTMARK_in_creation_statement186); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "creation_statement"



    // $ANTLR start "creation"
    // ./CubeSql.g:71:1: creation : ( creation_cube | creation_dimension );
    public final void creation() throws RecognitionException {
        try {
            // ./CubeSql.g:71:9: ( creation_cube | creation_dimension )
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==CREATE) ) {
                int LA3_1 = input.LA(2);

                if ( (LA3_1==CUBE) ) {
                    int LA3_2 = input.LA(3);

                    if ( (LA3_2==NAME) ) {
                        int LA3_4 = input.LA(4);

                        if ( (LA3_4==RELATED) ) {
                            int LA3_6 = input.LA(5);

                            if ( (LA3_6==SQL_TABLE) ) {
                                int LA3_7 = input.LA(6);

                                if ( (LA3_7==NAME) ) {
                                    int LA3_8 = input.LA(7);

                                    if ( (LA3_8==MEASURES) ) {
                                        alt3=1;
                                    }
                                    else if ( (LA3_8==LIST) ) {
                                        alt3=2;
                                    }
                                    else {
                                        NoViableAltException nvae =
                                            new NoViableAltException("", 3, 8, input);

                                        throw nvae;

                                    }
                                }
                                else {
                                    NoViableAltException nvae =
                                        new NoViableAltException("", 3, 7, input);

                                    throw nvae;

                                }
                            }
                            else {
                                NoViableAltException nvae =
                                    new NoViableAltException("", 3, 6, input);

                                throw nvae;

                            }
                        }
                        else {
                            NoViableAltException nvae =
                                new NoViableAltException("", 3, 4, input);

                            throw nvae;

                        }
                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("", 3, 2, input);

                        throw nvae;

                    }
                }
                else if ( (LA3_1==DIMENSION) ) {
                    int LA3_3 = input.LA(3);

                    if ( (LA3_3==NAME) ) {
                        int LA3_5 = input.LA(4);

                        if ( (LA3_5==RELATED) ) {
                            int LA3_6 = input.LA(5);

                            if ( (LA3_6==SQL_TABLE) ) {
                                int LA3_7 = input.LA(6);

                                if ( (LA3_7==NAME) ) {
                                    int LA3_8 = input.LA(7);

                                    if ( (LA3_8==MEASURES) ) {
                                        alt3=1;
                                    }
                                    else if ( (LA3_8==LIST) ) {
                                        alt3=2;
                                    }
                                    else {
                                        NoViableAltException nvae =
                                            new NoViableAltException("", 3, 8, input);

                                        throw nvae;

                                    }
                                }
                                else {
                                    NoViableAltException nvae =
                                        new NoViableAltException("", 3, 7, input);

                                    throw nvae;

                                }
                            }
                            else {
                                NoViableAltException nvae =
                                    new NoViableAltException("", 3, 6, input);

                                throw nvae;

                            }
                        }
                        else {
                            NoViableAltException nvae =
                                new NoViableAltException("", 3, 5, input);

                            throw nvae;

                        }
                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("", 3, 3, input);

                        throw nvae;

                    }
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 3, 1, input);

                    throw nvae;

                }
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;

            }
            switch (alt3) {
                case 1 :
                    // ./CubeSql.g:71:11: creation_cube
                    {
                    pushFollow(FOLLOW_creation_cube_in_creation193);
                    creation_cube();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // ./CubeSql.g:71:27: creation_dimension
                    {
                    pushFollow(FOLLOW_creation_dimension_in_creation197);
                    creation_dimension();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "creation"



    // $ANTLR start "creation_cube"
    // ./CubeSql.g:73:1: creation_cube : create_statement related_statement measure_statement referdimension_statement ;
    public final void creation_cube() throws RecognitionException {
        try {
            // ./CubeSql.g:73:15: ( create_statement related_statement measure_statement referdimension_statement )
            // ./CubeSql.g:73:17: create_statement related_statement measure_statement referdimension_statement
            {
            pushFollow(FOLLOW_create_statement_in_creation_cube206);
            create_statement();

            state._fsp--;


            pushFollow(FOLLOW_related_statement_in_creation_cube208);
            related_statement();

            state._fsp--;


            pushFollow(FOLLOW_measure_statement_in_creation_cube210);
            measure_statement();

            state._fsp--;


            pushFollow(FOLLOW_referdimension_statement_in_creation_cube212);
            referdimension_statement();

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "creation_cube"



    // $ANTLR start "creation_dimension"
    // ./CubeSql.g:75:1: creation_dimension : create_statement related_statement level_statement hierarchy_statement ;
    public final void creation_dimension() throws RecognitionException {
        try {
            // ./CubeSql.g:75:20: ( create_statement related_statement level_statement hierarchy_statement )
            // ./CubeSql.g:75:22: create_statement related_statement level_statement hierarchy_statement
            {
            pushFollow(FOLLOW_create_statement_in_creation_dimension220);
            create_statement();

            state._fsp--;


            pushFollow(FOLLOW_related_statement_in_creation_dimension222);
            related_statement();

            state._fsp--;


            pushFollow(FOLLOW_level_statement_in_creation_dimension224);
            level_statement();

            state._fsp--;


            pushFollow(FOLLOW_hierarchy_statement_in_creation_dimension226);
            hierarchy_statement();

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "creation_dimension"



    // $ANTLR start "create_statement"
    // ./CubeSql.g:77:1: create_statement : ( CREATE CUBE NAME | CREATE DIMENSION NAME );
    public final void create_statement() throws RecognitionException {
        Token NAME1=null;
        Token NAME2=null;

        try {
            // ./CubeSql.g:77:17: ( CREATE CUBE NAME | CREATE DIMENSION NAME )
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==CREATE) ) {
                int LA4_1 = input.LA(2);

                if ( (LA4_1==CUBE) ) {
                    alt4=1;
                }
                else if ( (LA4_1==DIMENSION) ) {
                    alt4=2;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 4, 1, input);

                    throw nvae;

                }
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;

            }
            switch (alt4) {
                case 1 :
                    // ./CubeSql.g:77:19: CREATE CUBE NAME
                    {
                    match(input,CREATE,FOLLOW_CREATE_in_create_statement233); 

                    match(input,CUBE,FOLLOW_CUBE_in_create_statement235); 

                    mode=1;

                    NAME1=(Token)match(input,NAME,FOLLOW_NAME_in_create_statement239); 

                    name_creation=(NAME1!=null?NAME1.getText():null);

                    }
                    break;
                case 2 :
                    // ./CubeSql.g:79:19: CREATE DIMENSION NAME
                    {
                    match(input,CREATE,FOLLOW_CREATE_in_create_statement282); 

                    match(input,DIMENSION,FOLLOW_DIMENSION_in_create_statement284); 

                    mode=2;

                    NAME2=(Token)match(input,NAME,FOLLOW_NAME_in_create_statement288); 

                    name_creation=(NAME2!=null?NAME2.getText():null).replace("~"," ");

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "create_statement"



    // $ANTLR start "related_statement"
    // ./CubeSql.g:81:1: related_statement : RELATED SQL_TABLE NAME ;
    public final void related_statement() throws RecognitionException {
        Token NAME3=null;

        try {
            // ./CubeSql.g:81:19: ( RELATED SQL_TABLE NAME )
            // ./CubeSql.g:81:21: RELATED SQL_TABLE NAME
            {
            match(input,RELATED,FOLLOW_RELATED_in_related_statement298); 

            match(input,SQL_TABLE,FOLLOW_SQL_TABLE_in_related_statement300); 

            NAME3=(Token)match(input,NAME,FOLLOW_NAME_in_related_statement302); 

            sql_table=(NAME3!=null?NAME3.getText():null);

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "related_statement"



    // $ANTLR start "referdimension_statement"
    // ./CubeSql.g:83:1: referdimension_statement : REFERENCES DIMENSION dimensions ;
    public final void referdimension_statement() throws RecognitionException {
        try {
            // ./CubeSql.g:83:26: ( REFERENCES DIMENSION dimensions )
            // ./CubeSql.g:83:28: REFERENCES DIMENSION dimensions
            {
            match(input,REFERENCES,FOLLOW_REFERENCES_in_referdimension_statement313); 

            match(input,DIMENSION,FOLLOW_DIMENSION_in_referdimension_statement315); 

            pushFollow(FOLLOW_dimensions_in_referdimension_statement317);
            dimensions();

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "referdimension_statement"



    // $ANTLR start "measure_statement"
    // ./CubeSql.g:85:1: measure_statement : MEASURES measures ;
    public final void measure_statement() throws RecognitionException {
        try {
            // ./CubeSql.g:85:19: ( MEASURES measures )
            // ./CubeSql.g:85:21: MEASURES measures
            {
            match(input,MEASURES,FOLLOW_MEASURES_in_measure_statement325); 

            pushFollow(FOLLOW_measures_in_measure_statement327);
            measures();

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "measure_statement"



    // $ANTLR start "level_statement"
    // ./CubeSql.g:87:1: level_statement : LIST OF LEVEL LBRACE levels RBRACE ;
    public final void level_statement() throws RecognitionException {
        try {
            // ./CubeSql.g:87:16: ( LIST OF LEVEL LBRACE levels RBRACE )
            // ./CubeSql.g:87:18: LIST OF LEVEL LBRACE levels RBRACE
            {
            match(input,LIST,FOLLOW_LIST_in_level_statement334); 

            match(input,OF,FOLLOW_OF_in_level_statement336); 

            match(input,LEVEL,FOLLOW_LEVEL_in_level_statement338); 

            match(input,LBRACE,FOLLOW_LBRACE_in_level_statement340); 

            pushFollow(FOLLOW_levels_in_level_statement342);
            levels();

            state._fsp--;


            match(input,RBRACE,FOLLOW_RBRACE_in_level_statement344); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "level_statement"



    // $ANTLR start "hierarchy_statement"
    // ./CubeSql.g:89:1: hierarchy_statement : HIERARCHY hierarchy ;
    public final void hierarchy_statement() throws RecognitionException {
        try {
            // ./CubeSql.g:89:21: ( HIERARCHY hierarchy )
            // ./CubeSql.g:89:23: HIERARCHY hierarchy
            {
            match(input,HIERARCHY,FOLLOW_HIERARCHY_in_hierarchy_statement353); 

            pushFollow(FOLLOW_hierarchy_in_hierarchy_statement355);
            hierarchy();

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "hierarchy_statement"



    // $ANTLR start "dimensions"
    // ./CubeSql.g:91:1: dimensions : dimension ( comma_statement dimension )* ;
    public final void dimensions() throws RecognitionException {
        try {
            // ./CubeSql.g:91:12: ( dimension ( comma_statement dimension )* )
            // ./CubeSql.g:91:14: dimension ( comma_statement dimension )*
            {
            pushFollow(FOLLOW_dimension_in_dimensions363);
            dimension();

            state._fsp--;


            // ./CubeSql.g:91:25: ( comma_statement dimension )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==COMMA||LA5_0==WS) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // ./CubeSql.g:91:26: comma_statement dimension
            	    {
            	    pushFollow(FOLLOW_comma_statement_in_dimensions367);
            	    comma_statement();

            	    state._fsp--;


            	    pushFollow(FOLLOW_dimension_in_dimensions369);
            	    dimension();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "dimensions"



    // $ANTLR start "dimension"
    // ./CubeSql.g:93:1: dimension : NAME AT sqlfield ;
    public final void dimension() throws RecognitionException {
        Token NAME4=null;

        try {
            // ./CubeSql.g:93:11: ( NAME AT sqlfield )
            // ./CubeSql.g:93:13: NAME AT sqlfield
            {
            NAME4=(Token)match(input,NAME,FOLLOW_NAME_in_dimension380); 

            dimensionlst.add((NAME4!=null?NAME4.getText():null).replace("~"," "));

            match(input,AT,FOLLOW_AT_in_dimension384); 

            pushFollow(FOLLOW_sqlfield_in_dimension386);
            sqlfield();

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "dimension"



    // $ANTLR start "measures"
    // ./CubeSql.g:95:1: measures : measure ( comma_statement measure )* ;
    public final void measures() throws RecognitionException {
        try {
            // ./CubeSql.g:95:10: ( measure ( comma_statement measure )* )
            // ./CubeSql.g:95:12: measure ( comma_statement measure )*
            {
            pushFollow(FOLLOW_measure_in_measures394);
            measure();

            state._fsp--;


            // ./CubeSql.g:95:20: ( comma_statement measure )*
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( (LA6_0==COMMA||LA6_0==WS) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // ./CubeSql.g:95:21: comma_statement measure
            	    {
            	    pushFollow(FOLLOW_comma_statement_in_measures397);
            	    comma_statement();

            	    state._fsp--;


            	    pushFollow(FOLLOW_measure_in_measures399);
            	    measure();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "measures"



    // $ANTLR start "measure"
    // ./CubeSql.g:97:1: measure : NAME AT sqlfield ;
    public final void measure() throws RecognitionException {
        Token NAME5=null;

        try {
            // ./CubeSql.g:97:9: ( NAME AT sqlfield )
            // ./CubeSql.g:97:11: NAME AT sqlfield
            {
            NAME5=(Token)match(input,NAME,FOLLOW_NAME_in_measure409); 

            measurelst.add((NAME5!=null?NAME5.getText():null));mode=3;tmp_con="";

            match(input,AT,FOLLOW_AT_in_measure413); 

            pushFollow(FOLLOW_sqlfield_in_measure415);
            sqlfield();

            state._fsp--;


            mode=1;measurefields.add(tmp_con);

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "measure"



    // $ANTLR start "levels"
    // ./CubeSql.g:99:1: levels : level ( comma_statement level )* ;
    public final void levels() throws RecognitionException {
        try {
            // ./CubeSql.g:99:7: ( level ( comma_statement level )* )
            // ./CubeSql.g:99:9: level ( comma_statement level )*
            {
            pushFollow(FOLLOW_level_in_levels425);
            level();

            state._fsp--;


            // ./CubeSql.g:99:15: ( comma_statement level )*
            loop7:
            do {
                int alt7=2;
                int LA7_0 = input.LA(1);
